comments list height limited to not be below comment bar, with scroll. also, added max-width 90% to avoid comments spanning all screen and loosing alignment that way

--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,7 @@ body
 {
 	display: inline-block;
 	text-align: left;
+	max-width: 90%;
 }
 #UserReg
 {
@@ -114,4 +115,5 @@ body
 }
 #commentsList{
 	margin: 10px;
+	overflow: auto;
 }
